Changes for templates:

  * Added a --use-ssh option to ss_get_by_ssh.php (issue 66).
  * Added a debugging log to ss_get_by_ssh.php (issue 54).
  * Enabled caching of results in ss_get_by_ssh.php (issue 46).
  * Added a test suite for ss_get_by_ssh.php (issue 110).
  * The 'free' stats suffered from PHP's issues with big numbers (issue 102).
  * There was ambiguity (but no error) in SHOW STATUS overrides (issue 106).
  * It was hard to debug failures caused by missing ext/mysql (issue 105).
  * Code to make ss_get_mysql_stats.php testable was broken (issue 108).

2009-12-13: version 1.1.5

  * Support for getting slave lag via mk-heartbeat was broken (issue 87).
  * The memcached stats command hung because it lacked "quit" (issue 65).
  * The COUNTER data type caused spikes; switched to DERIVE instead (issue41).
  * LOCK WAIT in an InnoDB transaction could cause an error (issue 91).
  * The cache file name didn't include the MySQL port (issue 82).
  * Added the -q option to the SSH command to quell missing homedir warnings.
  * The --port option to the MySQL templates could not be null.
  * The log_bytes_flushed and log_bytes_written were renamed (issue 81).

2009-10-25: version 1.1.4

  * Changed SSH options so host keys are accepted automatically (issue 68).
  * Parsing of the pending_ibuf_aio_reads property was broken.
  * Parsing of the pending_aio_log_ios property was broken.
  * Parsing of the pending_aio_sync_ios property was broken.
  * Added a debugging log for ss_get_mysql_stats.php (issue 54).
  * Added the --lint_check option to make-template.pl (issue 80).
  * Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
  * The template and script version is now recorded in a GPRINT (issue 79).
  * Restored unflushed_log, which was accidentally deleted in 1.1.3.
  * Added the InnoDB Internal Hash Memory Usage graph (issue 75).
  * Added the InnoDB Checkpoint Age graph (issue 73).
  * Added the InnoDB Insert Buffer Usage graph (issue 74).